[tool.poetry]
name = "getcoursedownloader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
m3u8-to-mp4 = "^0.1.11"
playwright = "^1.31.1"
pytest-playwright = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

